test/src/main/java/spring/test/mentor/error/UsedIdBadRequest.java
//package spring.test.mentor.error;
//
//import org.springframework.http.HttpStatus;
//import org.springframework.web.bind.annotation.ResponseStatus;
//
//@ResponseStatus(value = HttpStatus.BAD_REQUEST, reason = "identification number already used")
//public class UsedIdBadRequest extends RuntimeException {
//}
